'iconLogo Changed, return button in min-width below 700 is created

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="../src/assets/Logo.png" />
+  <link rel="shortcut icon" type="image/png" href="Logo.png" />
   <meta name="description" content="A reactJS+TypeScript Chat Messenger">
   <meta name="keywords" content="JSX, React, TypeScript, Tailwind, CRA">
   <meta name="author" content="Sepideh Sharifani">
